Colorize Hit hard cover Remove style changes since they're rarely interesting
git-svn-id: https://faramushcode.googlecode.com/svn/trunk@506 e2dc93ee-7d2d-0410-af30-bd5c5d140aa9

--- a/OtherProjects/FaraLogCleaner/Formats/tgg battle wiki.cfg
+++ b/OtherProjects/FaraLogCleaner/Formats/tgg battle wiki.cfg
@@ -12,6 +12,7 @@
 ^<<Ground Combat>> You hear the sound of
 ^<<Ground Vehicles>> You hear the sound of
 ^<<XP Spends>>
+^<<Game>> .+ changes .* style
 
 # Stance modifiers
 Delay\s+[-\d]+\%
@@ -41,6 +42,7 @@ Replace|^.*Headshot!!*$|[[span style="color:red;margin:5%"]]//$&//[[/span]]
 Replace|^.* suffers [\d]+ wound damage.*$|[[span style="color:red;margin:5%"]]//$&//[[/span]]
 Replace|^.* suffers [\d]+ bruise damage.*$|[[span style="color:red;margin:5%"]]//$&//[[/span]]
 Replace|^<<Ground Combat>>.* fires .* and hits!$|[[span style="color:red;margin:5%"]]//$&//[[/span]]
+Replace|^Hits hard cover.$|[[span style="color:blue"]]//$&//[[/span]]
 
 # Medic code
 Replace|^<<Medic Code>> .*$|[[span style="color:blue;margin:5%"]]//$&//[[/span]]
