--- a/OtherProjects/FaraLogCleaner/Formats/tgg battle.cfg
+++ b/OtherProjects/FaraLogCleaner/Formats/tgg battle.cfg
@@ -12,6 +12,7 @@
 ^<<Ground Combat>> You hear the sound of
 ^<<Ground Vehicles>> You hear the sound of
 ^<<XP Spends>>
+^<<Game>> .+ changes .* style
 
 # Stance modifiers
 Delay\s+[-\d]+\%
