--- a/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
+++ b/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IncidentNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
