--- a/OtherProjects/FoxwallDashboard/Web.config
+++ b/OtherProjects/FoxwallDashboard/Web.config
@@ -44,6 +44,10 @@
       </providers>
     </roleManager>
 
+    <caching>
+      <outputCache enableOutputCache="false" />
+    </caching>
+    
   </system.web>
 
   <system.webServer>
