--- a/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
+++ b/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
@@ -107,7 +107,7 @@
     <Compile Include="Account\Register.aspx.designer.cs">
       <DependentUpon>Register.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Call.cs" />
+    <Compile Include="Models\Call.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -115,15 +115,15 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="FoxwallDB.cs" />
+    <Compile Include="Database\FoxwallDB.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="IncidentNumberAssigner.cs" />
-    <Compile Include="SaveCallHandler.cs" />
-    <Compile Include="YearlyIncidentRecord.cs" />
+    <Compile Include="Handlers\IncidentNumberAssigner.cs" />
+    <Compile Include="Handlers\SaveCallHandler.cs" />
+    <Compile Include="Models\YearlyIncidentRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository.cs" />
+    <Compile Include="Database\Repository.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
