--- a/OtherProjects/FoxwallDashboard/Tests/Tests/Tests.csproj
+++ b/OtherProjects/FoxwallDashboard/Tests/Tests/Tests.csproj
@@ -49,8 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IncidentNumberAssignerTests.cs" />
+    <Compile Include="PasswordValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveCallHandlerTests.cs" />
+    <Compile Include="SavePersonHandlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\FoxwallDashboard.csproj">
