--- a/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
+++ b/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
@@ -99,6 +99,7 @@
     </Compile>
     <Compile Include="Handlers\IncidentNumberAssigner.cs" />
     <Compile Include="Handlers\SaveCallHandler.cs" />
+    <Compile Include="Models\CallPersonAssociation.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\YearlyIncidentRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
