--- a/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
+++ b/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
@@ -52,10 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AddCall.aspx" />
-    <Content Include="CallMenu.ascx" />
+    <Content Include="Controls\CallListDisplayControl.ascx" />
+    <Content Include="Controls\CallMenu.ascx" />
     <Content Include="Help.aspx" />
-    <Content Include="EditPersonControl.ascx" />
-    <Content Include="RecentCalls.aspx" />
+    <Content Include="Controls\EditPersonControl.ascx" />
+    <Content Include="ListCalls.aspx" />
+    <Content Include="People.aspx" />
+    <Content Include="Reports.aspx" />
     <Content Include="SearchForCall.aspx" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
@@ -70,7 +73,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="EditCallControl.ascx" />
+    <Content Include="Controls\EditCallControl.ascx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddCall.aspx.cs">
@@ -80,11 +83,21 @@
     <Compile Include="AddCall.aspx.designer.cs">
       <DependentUpon>AddCall.aspx</DependentUpon>
     </Compile>
-    <Compile Include="CallMenu.ascx.cs">
+    <Compile Include="BasePage.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Controls\CallListDisplayControl.ascx.cs">
+      <DependentUpon>CallListDisplayControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Controls\CallListDisplayControl.ascx.designer.cs">
+      <DependentUpon>CallListDisplayControl.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\CallMenu.ascx.cs">
       <DependentUpon>CallMenu.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="CallMenu.ascx.designer.cs">
+    <Compile Include="Controls\CallMenu.ascx.designer.cs">
       <DependentUpon>CallMenu.ascx</DependentUpon>
     </Compile>
     <Compile Include="Handlers\IncidentNumberAssigner.cs" />
@@ -95,11 +108,11 @@
     <Compile Include="Help.aspx.designer.cs">
       <DependentUpon>Help.aspx</DependentUpon>
     </Compile>
-    <Compile Include="EditPersonControl.ascx.cs">
+    <Compile Include="Controls\EditPersonControl.ascx.cs">
       <DependentUpon>EditPersonControl.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="EditPersonControl.ascx.designer.cs">
+    <Compile Include="Controls\EditPersonControl.ascx.designer.cs">
       <DependentUpon>EditPersonControl.ascx</DependentUpon>
     </Compile>
     <Compile Include="Handlers\PasswordValidator.cs" />
@@ -120,14 +133,28 @@
     <Compile Include="Models\CallPersonAssociation.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\YearlyIncidentRecord.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Database\Repository.cs" />
-    <Compile Include="RecentCalls.aspx.cs">
-      <DependentUpon>RecentCalls.aspx</DependentUpon>
+    <Compile Include="People.aspx.cs">
+      <DependentUpon>People.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="RecentCalls.aspx.designer.cs">
-      <DependentUpon>RecentCalls.aspx</DependentUpon>
+    <Compile Include="People.aspx.designer.cs">
+      <DependentUpon>People.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Database\Repository.cs" />
+    <Compile Include="ListCalls.aspx.cs">
+      <DependentUpon>ListCalls.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ListCalls.aspx.designer.cs">
+      <DependentUpon>ListCalls.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Reports.aspx.cs">
+      <DependentUpon>Reports.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reports.aspx.designer.cs">
+      <DependentUpon>Reports.aspx</DependentUpon>
     </Compile>
     <Compile Include="SearchForCall.aspx.cs">
       <DependentUpon>SearchForCall.aspx</DependentUpon>
@@ -143,11 +170,11 @@
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
     </Compile>
-    <Compile Include="EditCallControl.ascx.cs">
+    <Compile Include="Controls\EditCallControl.ascx.cs">
       <DependentUpon>EditCallControl.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="EditCallControl.ascx.designer.cs">
+    <Compile Include="Controls\EditCallControl.ascx.designer.cs">
       <DependentUpon>EditCallControl.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
