Fixed postback bug, added default buttons and focus, added connect string to web config

--- a/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
+++ b/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
@@ -131,6 +131,7 @@
     </Compile>
     <Compile Include="Handlers\SaveCallHandler.cs" />
     <Compile Include="Models\CallPersonAssociation.cs" />
+    <Compile Include="Models\Password.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\YearlyIncidentRecord.cs" />
     <Compile Include="People.aspx.cs">
