--- a/OtherProjects/FoxwallDashboard/Tests/Tests/Tests.csproj
+++ b/OtherProjects/FoxwallDashboard/Tests/Tests/Tests.csproj
@@ -48,6 +48,8 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditCallLoadHandlerTests.cs" />
+    <Compile Include="EditPersonLoadHandlerTests.cs" />
     <Compile Include="IncidentNumberAssignerTests.cs" />
     <Compile Include="PasswordValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
