Update config for new DB.

--- a/OtherProjects/FoxwallDashboard/Web.config
+++ b/OtherProjects/FoxwallDashboard/Web.config
@@ -16,7 +16,7 @@
 		
             <!--
             
-            <add name="Foxwall" connectionString="Data Source=foxwall2.db.6045744.hostedresource.com;Initial Catalog=foxwall2;user=foxwall2;password=test;" providerName="System.Data.SqlClient"/>
+            <add name="Foxwall" connectionString="Data Source=foxwall.db.7208478.hostedresource.com;Initial Catalog=foxwall;user=foxwall;password=test;" providerName="System.Data.SqlClient"/>
             -->
             
             <add name="Foxwall" connectionString="Data Source=(local);Initial Catalog=foxwall2;user=test;password=test;" providerName="System.Data.SqlClient"/>
