--- a/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
+++ b/OtherProjects/FoxwallDashboard/FoxwallDashboard.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Handlers\EditPersonLoadHandler.cs" />
     <Compile Include="Handlers\IncidentNumberAssigner.cs" />
     <Compile Include="Handlers\ListCallsLoadHandler.cs" />
+    <Compile Include="Handlers\PreferenceManager.cs" />
     <Compile Include="Help.aspx.cs">
       <DependentUpon>Help.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -184,6 +185,7 @@
     <Compile Include="Models\CallPersonAssociation.cs" />
     <Compile Include="Models\Password.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Preference.cs" />
     <Compile Include="Models\SearchCriteria.cs" />
     <Compile Include="Models\YearlyIncidentRecord.cs" />
     <Compile Include="People.aspx.cs">
