--- a/OtherProjects/FoxwallDashboard/Web.config
+++ b/OtherProjects/FoxwallDashboard/Web.config
@@ -19,7 +19,7 @@
             <add name="Foxwall" connectionString="Data Source=foxwall.db.7208478.hostedresource.com;Initial Catalog=foxwall;user=foxwall;password=test;" providerName="System.Data.SqlClient"/>
             -->
             
-            <add name="Foxwall" connectionString="Data Source=(local);Initial Catalog=foxwall2;user=test;password=test;" providerName="System.Data.SqlClient"/>
+            <add name="Foxwall" connectionString="Data Source=(local);Initial Catalog=foxwall;user=test;password=test;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.web>
 		<customErrors mode="Off"/>
