--- a/OtherProjects/FoxwallDashboard/Web.config
+++ b/OtherProjects/FoxwallDashboard/Web.config
@@ -16,9 +16,14 @@
 		
             <!--
             
-            <add name="Foxwall" connectionString="Data Source=foxwall.db.7208478.hostedresource.com;Initial Catalog=foxwall;user=foxwall;password=test;" providerName="System.Data.SqlClient"/>
-            -->
+            STAGING GROUND
+            <add name="Foxwall" connectionString="Data Source=foxwall2.db.6045744.hostedresource.com;Initial Catalog=foxwall2;user=foxwall2;password=test;" providerName="System.Data.SqlClient"/>
             
+            REAL SERVER
+            <add name="Foxwall" connectionString="Data Source=foxwall.db.7208478.hostedresource.com;Initial Catalog=foxwall;user=foxwall;password=test;" providerName="System.Data.SqlClient"/>
+            
+            DEV WORKSPACE
+            -->
             <add name="Foxwall" connectionString="Data Source=(local);Initial Catalog=foxwall;user=test;password=test;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.web>
