Update docs for obsolete code.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Faraday's Softcode
 title: Code for PennMUSH
 email: faraday@aresmush.com
 description: "Utilities designed for PennMUSH online text-based game servers."
-copyright: "Copyright 2014 by Linda Naughton"
+copyright: "Copyright 2014 by Faraday"
 baseurl: ""
 siteroot: "/MUSH"
 url: "http://www.aresmush.com"
